message TesMoosAppConfig
{
  optional uint32 app_tick = 1 [default = 10];
  optional uint32 comm_tick = 2 [default = 10];
  
  enum Verbosity { VERBOSITY_QUIET = 1; VERBOSITY_WARN = 2; VERBOSITY_VERBOSE = 3; VERBOSITY_DEBUG = 4; VERBOSITY_GUI = 5; }
  optional Verbosity verbosity = 3 [default = VERBOSITY_VERBOSE];

  optional bool log = 4 [default = true];
  optional string log_path = 5 [default = "./"];

  optional double lat_origin = 102;
  optional double lon_origin = 103;
  
  message DoubleInitializer
  {
    required string moos_var = 1;
    required double value = 2;
  }

  message StringInitializer
  {
    required string moos_var = 1;
    required string value = 2;
  }

  message DoubleGlobalInitializer
  {
    required string moos_var = 1;
    required string global_cfg_var = 2;
  }

  message StringGlobalInitializer
  {
    required string moos_var = 1;
    required string global_cfg_var = 2;
  }
  
  repeated DoubleInitializer initializer_double = 10;
  repeated StringInitializer initializer_string = 11;
  repeated DoubleGlobalInitializer global_initializer_double = 12;
  repeated StringGlobalInitializer global_initializer_string = 13;
}
